# sentiment-analysis

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: classification_rules.yaml  settings.yaml
dashboard/: app.py  artifact_template.html  hub_template.html  sample_brands.json
data/: hub_state.json
data/insights/: herbl_clove_iraq.json  ors_tiktok.json  trend.json
src/dabur_listen/: __init__.py  artifact.py  cli.py  config.py  db.py  enrich.py  hub.py  importer.py  ingest.py  insights.py
tests/: test_smoke.py
training/: corrections.jsonl.example
